# llm_story_evolution

./: .roocode  README.md  project_status.md  pyproject.toml
src/: app.py  architecture.md  test_app.py  visualize_stories.py
src/llm/: ollama_service.py
src/story/: manager.py
src/story_cache/: seven sisters_0.txt  seven sisters_1.txt  seven sisters_10.txt  seven sisters_100.txt  seven sisters_101.txt  seven sisters_102.txt  seven sisters_103.txt  seven sisters_104.txt  seven sisters_105.txt  seven sisters_106.txt  seven sisters_107.txt  seven sisters_108.txt  seven sisters_109.txt  seven sisters_11.txt  seven sisters_110.txt  seven sisters_111.txt  seven sisters_112.txt  seven sisters_113.txt  seven sisters_114.txt  seven sisters_115.txt  seven sisters_116.txt  seven sisters_117.txt  seven sisters_118.txt  seven sisters_119.txt  seven sisters_12.txt  seven sisters_120.txt  seven sisters_121.txt  seven sisters_122.txt  seven sisters_123.txt  seven sisters_124.txt  seven sisters_125.txt  seven sisters_126.txt  seven sisters_127.txt  seven sisters_128.txt  seven sisters_129.txt  seven sisters_13.txt  seven sisters_130.txt  seven sisters_131.txt  seven sisters_132.txt  seven sisters_133.txt  (+763 more)
src/ui/: cli.py
